add 3 lab